--- a/swav/requirements.txt
+++ b/swav/requirements.txt
@@ -4,3 +4,8 @@ numpy==1.19.5
 tensorflow==2.5.0
 scikit_learn==0.24.2
 tensorflow_datasets==4.4.0
+
+imbalanced_learn==0.8.0
+pandas==0.24.2
+imblearn==0.0
+Pillow==8.3.1
